# ocr-agentic-rag

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  EVALUATION_RESULTS.md  README.md  dataset_adapters.py  eval_dataset_adapters.py  eval_monitoring_metrics.py  eval_other_metrics.py  eval_postprocess_utils.py  eval_postprocessing_utils.py  eval_runner.py  pyproject.toml  requirements.txt  run_benchmarks.py  run_e2e.py  setup.py
credit_risk/: CREDIT_RISK_REGULATORY_CONTEXT.md  CREDIT_RISK_VALIDATION_REPORT.md  __init__.py  pipeline.py
data/: data_structure.json  data_structure.txt  extract_folder_structure.py
evaluation/: RAG_FINQA_LESSONS.md  README.md  __init__.py  credit_risk_eval.py  e2e_full_suite.py  e2e_functional_eval.py  e2e_robustness_test.py  metrics.py  multimodal_eval.py  ocr_eval.py  rag_eval.py  system_tests.py
examples/: credit_risk_demo.py  e2e_demo.py  evaluation_demo.py  full_e2e_demo.py  ocr_demo.py  rag_demo.py
models/: report_paddleocr_sroie_funsd.txt
notebooks/: 00_pd_homecredit_lstm_kaggle.ipynb  01_lendingclub_feature_engineering.ipynb  01_pd_lendingclub_feature_engineering.ipynb  02_pd_xgboost_training.ipynb  02a_pd_xgboost_training.ipynb  02b_pd_ann_training.ipynb  02c_pd_quantum_qvc_training.ipynb  02z_pd_model_comparison.ipynb  03_pd_quantum_training.ipynb  03_sentiment_FP_FiQA_feature_engineering.ipynb  04_qnlp_sentiment_training.ipynb  04_uci_feature_engineering.ipynb  04a_sentiment_finbert_training.ipynb  04b_sentiment_qnlp_training.ipynb  04z_sentiment_model_comparison.ipynb  05_agentic_demo.ipynb  05_finqa_embeddings_colab.ipynb  ENV_SETUP.md  build_retriever_index.ipynb  demo_agentic_rag_eval.ipynb  demo_credit_risk_pd.ipynb  demo_credit_risk_pd_business_impact.ipynb  demo_hybrid_ocr_eval.ipynb  demo_run_processing_job.ipynb  homecredit-first2000-kaggle.ipynb  kernel-metadata.json  metrics_summary.json  paper_02a_comparison.ipynb  paper_02a_validation.ipynb  paper_04a_failure_mode_analysis.ipynb  pd_uci_feature_engineering.ipynb  rag_build_retriever_index.ipynb  requirements-notebooks.txt  sagemaker_debugging.ipynb
ocr_pipeline/: __init__.py  layout_regions.py  quality_assessment.py  template_detector.py
parallel/: ray_worker.py
rag_system/: __init__.py  chunking.py  financial_constants.py  finqa_program_executor.py  index_preprocess.py  multimodal_rag.py  primers.py  reranking.py  retrieval.py  tatqa_numeric_helper.py
scripts/: audit_out_of_sample_contamination.py  build_finqa_embeddings_colab.py  (+35 more)
(+374 files in other folders)
